# prozessverwaltung

./: Cargo.toml  readme.org
Output/: output_2023-06-24_11-40-18.org  output_2023-06-24_12-08-36.org  output_2023-06-24_12-13-22.org  output_2023-06-24_12-24-49.org
examples/: Berichte.org
examples/Output/: output_2023-06-25_19-00-42.org  output_2023-06-25_19-00-57.org
examples/input/: Beispiel1.csv  Beispiel2.csv
examples/output/: dritterVersuch.org  fünfterVersuch.org  sechsterVersuch.org  siebterVersuch.org  vierterVersuch.org  zweiterVersuch.org
src/: main.rs  output.rs  process.rs  scheduler.rs
