[package]
name = "prozessverwaltung"
version = "0.1.0"
edition = "2021"
authors = ["Abdel Malik Najhi"]
license = "GPL-3.0-or-later"


[[bin]]
name = "prozessverwaltung"
path = "src/main.rs"

[dependencies]
chrono = "0.4.26"

[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
